[project]
name = 'namectl'
version = '1.0.0'
description = 'A DNS record controller with declarative configuration'
authors = [
    { name = 'Markus Wang Halvorsen', email = 'mwh@halvorsenfamilien.com' },
]
keywords = ['dns', 'controller', 'config']
dependencies = [
    'pyyaml==6.0.1',
    'requests==2.31.0',
]

[project.urls]
Repository = 'https://github.com/halworsen/namectl'
